<?xml version="1.0.0"?>
    <package>
    <name>lingao_bringup</name>
    <version>1.0.0</version>
    <description>The lingao bringup package</description>
    <maintainer email="keaa@keaa.net">owen</maintainer>

    <license>Apache License 2.0</license>

    <author email="keaa@keaa.net">owen</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>sensor_msgs</build_depend>
    
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>imu-filter-madgwick</run_depend>
    <run_depend>imu_calib</run_depend>

    <export></export>
</package>
