<?xml version="1.0.0"?>
    <package>
    <name>lingao_description</name>
    <version>1.4.1</version>
    <description>The lingao_description package</description>
    <maintainer email="keaa@keaa.net">keaa</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>urdf</build_depend>
    <build_depend>xacro</build_depend>

    <run_depend>urdf</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>kobuki_description</run_depend>
    <run_depend>create_description</run_depend>

    <export>
    </export>
</package>
